--- a/template_management/templates/template_new.html
+++ b/template_management/templates/template_new.html
@@ -119,6 +119,7 @@
               <textarea id="{{form.placeholders.auto_id}}"
 												name="{{form.placeholders.name}}"
 												class='form-control'
+                        style='font-family: Menlo, monospace; font-size:13px; background: #f5f5f5;'
                         tabindex='3'
                         rows='15'>{{form.placeholders.value|default:"{}"}}</textarea>
 							<small class='text-danger'><strong>
