--- a/campaign_management/templates/parts/send-test-email-modal.html
+++ b/campaign_management/templates/parts/send-test-email-modal.html
@@ -2,28 +2,33 @@
 
 <div id='send-test-email-modal' class="modal fade" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
-    <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" tabindex='-1' aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h3 class="modal-title">{% trans 'Send a test email' %}</h3>
-        </div>
-        <div class="modal-body">
-          <div class="form-group">
-            <label for="file_import" class="control-label">{% trans 'Send a test email to' %}:</label>
-            <input class='form-control' id="test_email" name="csv_file" type="type" tabindex='1' value='{{user.email}}'/>
-						<small class='help-block'>Send to up to 3 emails by separating them with a comma.</small>
-          </div>
-					<div class='alert alert-info'>
-						You will receive the email as your subscribers will once you sent
-						it to you them.<br />
-						This test email’s subject will be prefixed with [TEST].
+		<form id='test-email-form' method='post' action="{% url 'campaign-send-test-email' campaign.id %}">
+			{% csrf_token %}
+			<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" tabindex='-1' aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h3 class="modal-title">{% trans 'Send a Test Email' %}</h3>
 					</div>
-        </div>
-        <div class="modal-footer">
-          <a href='javascript:void(0)' type="button" tabindex=3 class="btn btn-default" data-dismiss="modal">{% trans 'Cancel' %}</a>
-          <a class="btn btn-success" tabindex=2>{% trans 'Send test email' %}</a>
-        </div>
-    </div><!-- /.modal-content -->
+					<div class="modal-body">
+						<div class="form-group">
+							<label for="file_import" class="control-label">{% trans 'Send a test email to' %}:</label>
+							<input class='form-control' id="test_email" name="emails"
+										 type="type" tabindex='1' value='{{user.email}}'
+										 autofocus />
+							<small class='help-block'>Send to up to 3 emails by separating them with a comma.</small>
+						</div>
+						<div class='alert alert-info'>
+							You will receive the email as your subscribers will once you sent
+							it to you them.<br />
+							This test email’s subject will be prefixed with [TEST].
+						</div>
+					</div>
+					<div class="modal-footer">
+						<a href='javascript:void(0)' type="button" tabindex=3 class="btn btn-default" data-dismiss="modal">{% trans 'Cancel' %}</a>
+						<button id="btn-send-test-email" class="btn btn-success" tabindex=2>{% trans 'Send test email' %}</button>
+					</div>
+			</div><!-- /.modal-content -->
+		</form>
   </div><!-- /.modal-dialog -->
 </div>
 
