--- a/templates/master.html
+++ b/templates/master.html
@@ -18,7 +18,7 @@
 				z-index: 1000;
 				right: 50%;
 				top: 50px;
-				transform: translate(50%, -100px);
+				transform: translateX(50%);
 				box-shadow: 0 1px 1px #b3b3b3;
 			}
 			main {
