Display actual recipient count on email listing.

--- a/campaign_management/templates/campaign_list.html
+++ b/campaign_management/templates/campaign_list.html
@@ -99,7 +99,7 @@
 									</p>
 									<div style='position:relative'>
 										<span class='stat-block'>
-											<span class='stat-count'>3,422</span>
+											<span class='stat-count'>{{ campaign.recipient_count|default:"N/A" }}</span>
 											<span class='stat-label'>Sent</span>
 										</span>
 										<span class='stat-block'>
