--- a/templates/parts/main-navigation.html
+++ b/templates/parts/main-navigation.html
@@ -5,6 +5,7 @@
 		background: #FFF;
 		border-bottom: 1px solid #dcdcdc;
 		margin-top: 1rem;
+		border-radius : 0;
 	}
 	.navbar-minimail a.navbar-brand {
 		color: currentColor;
