Various small UI changes.

--- a/templates/parts/footer.html
+++ b/templates/parts/footer.html
@@ -3,8 +3,9 @@
     <br />
     <br />
     <hr />
-    <p class='text-center'>
-      Minimail &ndash; Made with &hearts; &ndash; 2016
+    <p class='text-center text-muted'>
+		<small>Minimail &ndash; Made with <span style='color:#ff5a79'>&hearts;</span> in Beijing &ndash; &copy; 2016</small>
     </p>
+    <br />
   </div>
 </div>
